Fix alignment of data options in Edit Data Field dialog

--- a/src/app/components/data-field-edit-dialog/data-field-edit-dialog.component.scss
+++ b/src/app/components/data-field-edit-dialog/data-field-edit-dialog.component.scss
@@ -53,3 +53,17 @@
 .bottom-margin {
   margin-bottom: 15px;
 }
+
+.data-options {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 8px;
+}
+
+.data-option {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
